Parameterized raw types and other general warning cleanup